add get All Users for admin and Delete User functions
